--- a/tests/data/test.conf
+++ b/tests/data/test.conf
@@ -2,3 +2,8 @@
 MODEL_STORAGE = "scripts/models"
 EMB_PATH = "tests/data/test_embeds.kv"
 GENETIC_DATA_PATH = "tests/data/generic.txt"
+
+[classifier-service]
+MODEL_STORAGE = "scripts/models/intents"
+EMB_PATH = "http://51.144.105.1:3349/get_vector"
+GENETIC_DATA_PATH = "tests/data/generic.txt"
