Fixed test config file

--- a/tests/data/test.conf
+++ b/tests/data/test.conf
@@ -1,5 +1,5 @@
 [live-dialog-service]
-MODEL_STORAGE = "scripts/models"
+MODEL_STORAGE = "scripts/models/live_dialog"
 EMB_PATH = "tests/data/test_embeds.kv"
 GENETIC_DATA_PATH = "tests/data/generic.txt"
 
