Logs and configs
1. Chenged config file. One environment variable is now used.
2. Added logging into embedder service.

--- a/tests/data/test.conf
+++ b/tests/data/test.conf
@@ -5,5 +5,11 @@ GENETIC_DATA_PATH = "tests/data/generic.txt"
 
 [classifier-service]
 MODEL_STORAGE = "scripts/models/intents"
-EMB_PATH = "http://51.144.105.1:3349/get_vector"
+EMB_PATH = "tests/data/test_embeds.kv"
 GENETIC_DATA_PATH = "tests/data/generic.txt"
+
+[embedder]
+test = "tests/data/test_embeds.kv"
+
+[tokenizer]
+test = "lem"
