--- a/tests/data/test.conf
+++ b/tests/data/test.conf
@@ -1,12 +1,12 @@
 [live-dialog-service]
 MODEL_STORAGE = "scripts/models/live_dialog"
 EMB_PATH = "tests/data/test_embeds.kv"
-GENETIC_DATA_PATH = "tests/data/generic.txt"
+GENERIC_DATA_PATH = "tests/data/generic.txt"
 
 [classifier-service]
 MODEL_STORAGE = "scripts/models/intents"
 EMB_PATH = "tests/data/test_embeds.kv"
-GENETIC_DATA_PATH = "tests/data/generic.txt"
+GENERIC_DATA_PATH = "tests/data/generic.txt"
 
 [embedder]
 test = "tests/data/test_embeds.kv"
