New intent classifier service

--- a/tests/data/classifier_service/classifier_service.conf
+++ b/tests/data/classifier_service/classifier_service.conf
@@ -1,4 +1,10 @@
 [classifier-service]
 MODEL_STORAGE = scripts/models/intents
-EMBEDDER_PATH = tests/data/test_embeds.kv
+EMBEDDER_PATH = tests/data/
 GENERIC_DATA_PATH = tests/data/generic.txt
+
+[embedder]
+test = test_embeds
+
+[tokenizer]
+test = lem
