Fixed VeraLiveDialog service. New logic for embedder factory

--- a/tests/data/vera_live_dialog/vera_live_dialog.conf
+++ b/tests/data/vera_live_dialog/vera_live_dialog.conf
@@ -1,9 +1,10 @@
 [live-dialog-service]
 MODEL_STORAGE = scripts/models/live_dialog
+EMBEDDER_PATH = tests/data/
 GENERIC_DATA_PATH = tests/data/generic.txt
 
 [embedder]
-test = tests/data/test_embeds.kv
+test = test_emeds
 
 [tokenizer]
 test = lem
