Fixed live_dialog tests

--- a/tests/data/vera_live_dialog/vera_live_dialog.conf
+++ b/tests/data/vera_live_dialog/vera_live_dialog.conf
@@ -4,7 +4,7 @@ EMBEDDER_PATH = tests/data/
 GENERIC_DATA_PATH = tests/data/generic.txt
 
 [embedder]
-test = test_emeds
+test = test_embeds
 
 [tokenizer]
 test = lem
