--- a/tests/data/intent_classifier_service/intent_classifier_service.conf
+++ b/tests/data/intent_classifier_service/intent_classifier_service.conf
@@ -1,5 +1,5 @@
 [classifier-service]
-MODEL_STORAGE = scripts/models/intents
+MODEL_STORAGE = tests/models/intents
 EMBEDDER_PATH = tests/data/
 GENERIC_DATA_PATH = tests/data/generic.txt
 
