Rewritten saving and loading of cubes and models
1. Now all models are saved recursively in json
2. All services except sentiment are saved in a new format
3. Tests take into account the latest changes

--- a/tests/data/multistage_classifier/multistage_classifier.conf
+++ b/tests/data/multistage_classifier/multistage_classifier.conf
@@ -1,5 +1,5 @@
 [multistage-classifier-service]
-MODEL_STORAGE = scripts/models/intents
+MODEL_STORAGE = tests/models/intents
 EMBEDDER_PATH = tests/data/
 GROUPS_DATA_PATH = scripts/data/groups.csv
 MINOR_MODEL_ID = 0
