--- a/tests/data/test.conf
+++ b/tests/data/test.conf
@@ -1,15 +1,15 @@
 [live-dialog-service]
-MODEL_STORAGE = "scripts/models/live_dialog"
-EMB_PATH = "tests/data/test_embeds.kv"
-GENERIC_DATA_PATH = "tests/data/generic.txt"
+MODEL_STORAGE = scripts/models/live_dialog
+EMBEDDER_PATH = tests/data/
+GENERIC_DATA_PATH = tests/data/generic.txt
 
 [classifier-service]
-MODEL_STORAGE = "scripts/models/intents"
-EMB_PATH = "tests/data/test_embeds.kv"
-GENERIC_DATA_PATH = "tests/data/generic.txt"
+MODEL_STORAGE = scripts/models/intents
+EMB_PATH = tests/data/test_embeds.kv
+GENERIC_DATA_PATH = tests/data/generic.txt
 
 [embedder]
-test = "tests/data/test_embeds.kv"
+test = test_embeds
 
 [tokenizer]
-test = "lem"
+test = lem
